--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-ga": "^3.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^4.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
@@ -27,7 +27,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,5 +51,11 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "eslintConfig": {
+  "rules": {
+    "no-unused-vars": "warn",
+    "react/jsx-pascal-case": "warn"
   }
+}
 }
