--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "website-resume",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://grzegorz-gomza.github.io/portfolio/",
+  "homepage": "https://grzegorz-gomza.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
